Create `ui` package

--- a/app/src/main/res/layout/fragment_paper_view.xml
+++ b/app/src/main/res/layout/fragment_paper_view.xml
@@ -3,7 +3,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="rejasupotaro.arxiv.reader.PaperViewFragment"
+        tools:context="rejasupotaro.arxiv.reader.ui.paper.view.PaperViewFragment"
         >
 
     <com.github.barteksc.pdfviewer.PDFView
