--- a/app/src/main/res/layout/fragment_paper_find.xml
+++ b/app/src/main/res/layout/fragment_paper_find.xml
@@ -5,4 +5,10 @@
         android:orientation="vertical"
         >
 
+    <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/spacing_medium"
+            />
+
 </LinearLayout>
