--- a/app/src/main/res/layout/fragment_paper_find.xml
+++ b/app/src/main/res/layout/fragment_paper_find.xml
@@ -28,4 +28,11 @@
                 android:text="@string/button_submit"
                 />
     </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/searchResultListView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
 </LinearLayout>
