--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -7,12 +7,12 @@
         android:title="@string/navigation_my_papers" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_viewer"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/navigation_viewer" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_find_papers"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/navigation_find_papers" />
 
