--- a/app/src/main/res/layout/fragment_paper_list.xml
+++ b/app/src/main/res/layout/fragment_paper_list.xml
@@ -6,7 +6,7 @@
         >
 
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/myPaperListView"
+            android:id="@+id/paperListView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
