--- a/app/src/main/res/layout/fragment_paper_search.xml
+++ b/app/src/main/res/layout/fragment_paper_search.xml
@@ -5,29 +5,39 @@
         android:orientation="vertical"
         >
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_margin="@dimen/spacing_medium"
             >
 
-        <EditText
-                android:id="@+id/queryEditText"
-                android:layout_width="0dp"
+        <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:inputType="text"
-                android:maxLines="1"
-                android:padding="@dimen/spacing_medium"
-                />
+                android:orientation="horizontal"
+                >
 
-        <Button
-                android:id="@+id/submitButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/button_submit"
-                />
-    </LinearLayout>
+            <EditText
+                    android:id="@+id/queryEditText"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:padding="@dimen/spacing_medium"
+                    />
+
+            <Button
+                    android:id="@+id/submitButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/md_blue_700"
+                    android:text="@string/button_search"
+                    android:textColor="@color/md_white_1000"
+                    />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/searchResultListView"
