--- a/app/src/main/res/layout/activity_paper_view.xml
+++ b/app/src/main/res/layout/activity_paper_view.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         >
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/paperListView"
+    <com.github.barteksc.pdfviewer.PDFView
+            android:id="@+id/pdfView"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
             />
+
 </LinearLayout>
+
