--- a/app/src/main/res/layout/list_item_paper.xml
+++ b/app/src/main/res/layout/list_item_paper.xml
@@ -3,16 +3,14 @@
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/spacing_medium"
-        android:paddingEnd="@dimen/spacing_large"
-        android:paddingStart="@dimen/spacing_large"
-        android:paddingTop="@dimen/spacing_medium"
+        android:padding="@dimen/spacing_large"
         >
 
     <TextView
             android:id="@+id/titleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/text_color_primary"
             android:textSize="@dimen/text_size_medium"
             android:textStyle="bold"
             />
@@ -22,14 +20,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_small"
+            android:textColor="@color/text_color_secondary"
             android:textSize="@dimen/text_size_small"
             />
 
     <TextView
             android:id="@+id/relativeTimeTextView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="end"
             android:layout_marginTop="@dimen/spacing_small"
-            android:textSize="@dimen/text_size_small"
+            android:textColor="@color/text_color_tertiary"
+            android:textSize="@dimen/text_size_xsmall"
             />
 </LinearLayout>
