--- a/app/src/main/res/layout/list_item_search_result.xml
+++ b/app/src/main/res/layout/list_item_search_result.xml
@@ -45,30 +45,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/md_grey_200"
-            />
+                />
 
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="@dimen/spacing_medium"
                 >
 
             <TextView
                     android:id="@+id/summaryTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/spacing_medium"
                     android:ellipsize="end"
                     android:maxLines="3"
                     android:textSize="@dimen/text_size_small"
                     />
 
-            <TextView
-                    android:id="@+id/categoryTextView"
-                    android:layout_width="wrap_content"
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/categoryListView"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:textSize="@dimen/text_size_xsmall"
                     />
         </LinearLayout>
     </LinearLayout>
