--- a/app/src/main/res/layout/activity_paper_search.xml
+++ b/app/src/main/res/layout/activity_paper_search.xml
@@ -13,7 +13,8 @@
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
+                android:gravity="center_vertical"
                 android:orientation="horizontal"
                 >
 
@@ -28,13 +29,14 @@
                     android:padding="@dimen/spacing_medium"
                     />
 
-            <Button
-                    android:id="@+id/submitButton"
+            <com.mikepenz.iconics.view.IconicsButton
+                    android:id="@+id/searchButton"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:background="@color/md_blue_700"
-                    android:text="@string/button_search"
+                    android:text="{gmd_search}"
                     android:textColor="@color/md_white_1000"
+                    android:textSize="@dimen/icon_size_medium"
                     />
         </LinearLayout>
     </android.support.v7.widget.CardView>
