--- a/app/src/main/res/layout/list_item_search_result.xml
+++ b/app/src/main/res/layout/list_item_search_result.xml
@@ -51,13 +51,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:padding="@dimen/spacing_medium"
                 >
 
             <TextView
                     android:id="@+id/summaryTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/spacing_medium"
                     android:ellipsize="end"
                     android:maxLines="3"
                     android:textSize="@dimen/text_size_small"
@@ -67,6 +67,7 @@
                     android:id="@+id/categoryListView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing_medium"
                     />
         </LinearLayout>
     </LinearLayout>
