--- a/app/src/main/res/layout/activity_paper_search.xml
+++ b/app/src/main/res/layout/activity_paper_search.xml
@@ -33,6 +33,7 @@
                     android:id="@+id/searchButton"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_marginStart="@dimen/spacing_medium"
                     android:background="@color/md_blue_700"
                     android:text="{gmd_search}"
                     android:textColor="@color/md_white_1000"
