--- a/app/src/main/res/layout/activity_paper_list.xml
+++ b/app/src/main/res/layout/activity_paper_list.xml
@@ -29,16 +29,16 @@
                     android:textStyle="bold"
                     />
 
-            <TextView
+            <com.mikepenz.iconics.view.IconicsTextView
                     android:id="@+id/searchButton"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="?android:attr/selectableItemBackground"
                     android:gravity="center"
+                    android:textSize="@dimen/icon_size_medium"
                     android:padding="@dimen/spacing_medium"
-                    android:text="@string/button_find_more"
+                    android:text="{gmd_search}"
                     android:textColor="@color/text_color_light"
-                    android:textStyle="bold"
                     />
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
