--- a/app/src/main/res/layout/activity_paper_search.xml
+++ b/app/src/main/res/layout/activity_paper_search.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/spacing_medium"
+            android:layout_margin="@dimen/spacing_large"
             >
 
         <LinearLayout
@@ -27,16 +27,29 @@
                     android:inputType="text"
                     android:maxLines="1"
                     android:padding="@dimen/spacing_medium"
+                    android:paddingEnd="@dimen/spacing_medium"
+                    android:paddingStart="@dimen/spacing_medium"
                     />
 
-            <com.mikepenz.iconics.view.IconicsButton
+            <View
+                    android:layout_width="1px"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="@dimen/spacing_small"
+                    android:layout_marginTop="@dimen/spacing_small"
+                    android:background="@color/text_color_hint"
+                    />
+
+            <com.mikepenz.iconics.view.IconicsTextView
                     android:id="@+id/searchButton"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="@dimen/spacing_medium"
-                    android:background="@color/md_blue_700"
-                    android:text="{gmd_search}"
-                    android:textColor="@color/md_white_1000"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:gravity="center"
+                    android:paddingBottom="@dimen/spacing_medium"
+                    android:paddingEnd="@dimen/spacing_large"
+                    android:paddingStart="@dimen/spacing_large"
+                    android:paddingTop="@dimen/spacing_medium"
+                    android:text="{gmd_settings_voice}"
                     android:textSize="@dimen/icon_size_medium"
                     />
         </LinearLayout>
