Move download button

--- a/app/src/main/res/layout/activity_paper_search.xml
+++ b/app/src/main/res/layout/activity_paper_search.xml
@@ -28,7 +28,7 @@
                     android:maxLines="1"
                     android:padding="@dimen/spacing_medium"
                     android:paddingEnd="@dimen/spacing_medium"
-                    android:paddingStart="@dimen/spacing_medium"
+                    android:paddingStart="@dimen/spacing_large"
                     />
 
             <View
