--- a/app/src/main/res/layout/activity_paper_view.xml
+++ b/app/src/main/res/layout/activity_paper_view.xml
@@ -31,6 +31,7 @@
                         android:layout_gravity="bottom|center_horizontal"
                         android:paddingEnd="@dimen/spacing_xxlarge"
                         android:paddingStart="@dimen/spacing_xxlarge"
+                        android:textColor="@color/text_primary"
                         android:textAlignment="center"
                         android:textSize="@dimen/text_size_xlarge"
                         android:textStyle="bold"
@@ -57,10 +58,8 @@
                             android:layout_height="match_parent"
                             android:background="?android:attr/selectableItemBackground"
                             android:gravity="center"
-                            android:paddingBottom="@dimen/spacing_medium"
                             android:paddingEnd="@dimen/spacing_large"
                             android:paddingStart="@dimen/spacing_small"
-                            android:paddingTop="@dimen/spacing_medium"
                             android:text="{gmd_keyboard_arrow_left}"
                             android:textSize="@dimen/icon_size_medium"
                             />
@@ -85,10 +84,8 @@
                             android:layout_marginStart="@dimen/spacing_medium"
                             android:background="?android:attr/selectableItemBackground"
                             android:gravity="center"
-                            android:paddingBottom="@dimen/spacing_medium"
-                            android:paddingEnd="@dimen/spacing_large"
-                            android:paddingStart="@dimen/spacing_large"
-                            android:paddingTop="@dimen/spacing_medium"
+                            android:paddingEnd="@dimen/spacing_xlarge"
+                            android:paddingStart="@dimen/spacing_xlarge"
                             android:text="{gmd_file_download}"
                             android:textSize="@dimen/icon_size_medium"
                             />
