--- a/app/src/main/res/layout/activity_paper_list.xml
+++ b/app/src/main/res/layout/activity_paper_list.xml
@@ -24,7 +24,7 @@
                     android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:text="@string/app_name"
-                    android:textColor="@color/text_color_light"
+                    android:textColor="@color/text_light"
                     android:textSize="@dimen/text_size_large"
                     android:textStyle="bold"
                     />
@@ -35,10 +35,11 @@
                     android:layout_height="match_parent"
                     android:background="?android:attr/selectableItemBackground"
                     android:gravity="center"
-                    android:textSize="@dimen/icon_size_medium"
-                    android:padding="@dimen/spacing_medium"
+                    android:paddingEnd="@dimen/spacing_large"
+                    android:paddingStart="@dimen/spacing_xxlarge"
                     android:text="{gmd_search}"
-                    android:textColor="@color/text_color_light"
+                    android:textColor="@color/text_light"
+                    android:textSize="@dimen/icon_size_medium"
                     />
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
