--- a/app/src/main/res/layout/list_item_paper.xml
+++ b/app/src/main/res/layout/list_item_paper.xml
@@ -10,7 +10,7 @@
             android:id="@+id/titleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_color_primary"
+            android:textColor="@color/text_primary"
             android:textSize="@dimen/text_size_medium"
             android:textStyle="bold"
             />
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_small"
-            android:textColor="@color/text_color_secondary"
+            android:textColor="@color/text_secondary"
             android:textSize="@dimen/text_size_small"
             />
 
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginTop="@dimen/spacing_small"
-            android:textColor="@color/text_color_tertiary"
+            android:textColor="@color/text_tertiary"
             android:textSize="@dimen/text_size_xsmall"
             />
 
@@ -45,7 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:animateLayoutChanges="true"
-                android:background="@color/ink_blue"
+                android:background="@color/warm"
                 />
 
         <View
