--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#3F51B5</color>
-    <color name="color_primary_dark">#303F9F</color>
-    <color name="color_accent">#FF4081</color>
+    <color name="color_primary">@color/cold</color>
+    <color name="color_primary_dark">@color/cold_dark</color>
+    <color name="color_accent">@color/warm</color>
+
+    <color name="base">@color/md_grey_100</color>
+    <color name="cold_light">@color/md_teal_100</color>
+    <color name="cold">@color/md_teal_600</color>
+    <color name="cold_dark">@color/md_teal_900</color>
+    <color name="warm_light">@color/md_amber_100</color>
+    <color name="warm">@color/md_amber_600</color>
+    <color name="warm_dark">@color/md_amber_800</color>
 </resources>
