--- a/app/src/main/res/values/colors_text.xml
+++ b/app/src/main/res/values/colors_text.xml
@@ -1,7 +1,7 @@
 <resources>
-    <color name="text_color_primary">@color/md_grey_700</color>
-    <color name="text_color_secondary">@color/md_grey_600</color>
-    <color name="text_color_tertiary">@color/md_grey_500</color>
-    <color name="text_color_light">@color/md_grey_200</color>
-    <color name="text_color_hint">@color/md_grey_400</color>
+    <color name="text_primary">#b3000000</color>
+    <color name="text_secondary">#8a000000</color>
+    <color name="text_tertiary">#76000000</color>
+    <color name="text_light">#ffffffff</color>
+    <color name="text_hint">#61000000</color>
 </resources>
