--- a/app/src/main/res/layout/activity_paper_list.xml
+++ b/app/src/main/res/layout/activity_paper_list.xml
@@ -23,7 +23,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:text="@string/app_name"
+                    android:text="@string/my_library"
                     android:textColor="@color/text_light"
                     android:textSize="@dimen/text_size_large"
                     android:textStyle="bold"
