--- a/app/src/main/res/layout/activity_paper_search.xml
+++ b/app/src/main/res/layout/activity_paper_search.xml
@@ -46,7 +46,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginBottom="@dimen/spacing_small"
                         android:layout_marginTop="@dimen/spacing_small"
-                        android:background="@color/text_hint"
+                        android:background="@color/text_dark_hint"
                         />
 
                 <com.mikepenz.iconics.view.IconicsTextView
@@ -93,7 +93,7 @@
                 android:paddingStart="@dimen/spacing_xxlarge"
                 android:paddingTop="@dimen/spacing_large"
                 android:text="FILTERS {gmd_filter_list}"
-                android:textColor="@color/text_primary"
+                android:textColor="@color/text_dark_primary"
                 android:textStyle="bold"
                 />
     </android.support.v7.widget.CardView>
