Keep screen on while reading

--- a/app/src/main/res/layout/activity_paper_read.xml
+++ b/app/src/main/res/layout/activity_paper_read.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:keepScreenOn="true"
         >
 
     <com.github.barteksc.pdfviewer.PDFView
@@ -9,6 +10,5 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
-
 </LinearLayout>
 
