--- a/app/src/main/res/layout/activity_paper_list.xml
+++ b/app/src/main/res/layout/activity_paper_list.xml
@@ -44,11 +44,18 @@
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/paperListView"
+    <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            />
+            android:layout_height="match_parent"
+            >
+
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/paperListView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
 
