--- a/app/src/main/res/layout/activity_paper_search.xml
+++ b/app/src/main/res/layout/activity_paper_search.xml
@@ -65,14 +65,21 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.RecyclerView
-                android:id="@+id/searchResultListView"
+        <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/swipeRefreshLayout"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:clipToPadding="false"
-                android:padding="@dimen/spacing_large"
-                />
+                android:layout_height="match_parent"
+                >
+
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/searchResultListView"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:clipToPadding="false"
+                    android:padding="@dimen/spacing_large"
+                    />
+        </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 
     <android.support.v7.widget.CardView
