--- a/app/src/main/res/layout/activity_paper_view.xml
+++ b/app/src/main/res/layout/activity_paper_view.xml
@@ -140,6 +140,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/spacing_xlarge"
                     />
+
+            <TextView
+                    android:id="@+id/similarPapersTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing_xlarge"
+                    android:textSize="@dimen/text_size_medium"
+                    />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
