--- a/app/src/main/res/layout/activity_paper_view.xml
+++ b/app/src/main/res/layout/activity_paper_view.xml
@@ -103,6 +103,23 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/spacing_xlarge"
+                        android:text="@string/feature_words"
+                        android:textSize="@dimen/text_size_large"
+                        android:textStyle="bold"
+                        />
+
+                <TextView
+                        android:id="@+id/featureWordsTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/spacing_medium"
+                        android:textSize="@dimen/text_size_small"
+                        />
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/spacing_xlarge"
                         android:text="@string/similar_papers"
                         android:textSize="@dimen/text_size_large"
                         android:textStyle="bold"
